fix for slightly too small app container

--- a/css/layout.css
+++ b/css/layout.css
@@ -2001,7 +2001,7 @@ div {
     background-color:   white;
     -webkit-box-shadow: inset 0 3px 3px 0 rgba(0, 0, 0, .5);
     box-shadow:         inset 0 3px 3px 0 rgba(0, 0, 0, .5);
-    height:             100%;
+
 }
 
 .app-loader {
